--- a/admin.html
+++ b/admin.html
@@ -35,8 +35,8 @@
 				<ul class="layui-nav layui-layout-right">
 					<li class="layui-nav-item layui-hide-xs"><a href="#" class="menuSearch layui-icon layui-icon-search"></a></li>
 					<li class="layui-nav-item layui-hide-xs"><a href="#" class="fullScreen layui-icon layui-icon-screen-full"></a></li>
-					<li class="layui-nav-item layui-hide-xs"><a href="http://www.pearadmin.com" class="layui-icon layui-icon-website"></a></li>
-					<li class="layui-nav-item layui-hide-xs message"></li>
+					<!-- <li class="layui-nav-item layui-hide-xs"><a href="http://www.pearadmin.com" class="layui-icon layui-icon-website"></a></li> -->
+					<!-- <li class="layui-nav-item layui-hide-xs message"></li> -->
 					<li class="layui-nav-item user">
 						<!-- 头 像 -->
 						<a class="layui-icon layui-icon-username" href="javascript:;"></a>
@@ -47,7 +47,7 @@
 						</dl>
 					</li>
 					<!-- 主 题 配 置 -->
-					<li class="layui-nav-item setting"><a href="#" class="layui-icon layui-icon-more-vertical"></a></li>
+					<!-- <li class="layui-nav-item setting"><a href="#" class="layui-icon layui-icon-more-vertical"></a></li> -->
 				</ul>
 			</div>
 			<!-- 侧 边 区 域 -->
@@ -110,7 +110,7 @@
 				// 登出逻辑 
 				admin.logout(function(){
 					popup.success("注销成功",function(){
-						location.href = "login.html";
+						location.href = "index.html";
 					})
 					// 注销逻辑 返回 true / false
 					return true;
