--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 				</div>
 			</div>
 			<div class="layui-form-item">
-				<input placeholder="输入任意字符" lay-verify="required" hover class="layui-input"  />
+				<input placeholder="admin" lay-verify="required" hover class="layui-input"  value="admin"/>
 			</div>
 			<div class="layui-form-item">
-				<input placeholder="输入任意字符" lay-verify="required" hover class="layui-input"  />
+				<input placeholder="123456" lay-verify="required" hover class="layui-input"  value="123456"/>
 			</div>
 			<!-- <div class="layui-form-item">
 				<input placeholder="验证码 : "  hover  lay-verify="required" class="code layui-input layui-input-inline"  />
@@ -32,7 +32,7 @@
 			</div>
 			<div class="layui-form-item">
 				<button type="button" class="pear-btn pear-btn-success login" lay-submit lay-filter="login">
-					登 入
+					登 录
 				</button>
 			</div>
 		</form>
